<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/dialog_title"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="center"
        android:textStyle="bold"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/do_you_really_want_to_delete_this_plant" />
</LinearLayout>